--- a/index.html
+++ b/index.html
@@ -3,43 +3,37 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Fake 3D Effect with WebGL Shaders | Demo 1 | Codrops</title>
-		<meta name="description" content="Demo of the tutorial on how to create a fake 3D image effect with WebGL shaders." />
-		<meta name="keywords" content="webgl, 3d, image, shader, javascript, tutorial, demo, web development, effect" />
-		<meta name="author" content="Codrops" />
+		<title>Luxury Villa Phuket • Inside Tour</title>
+		<meta name="description" content="Interactive 3D tour of a luxury villa in Phuket - Inside View" />
+		<meta name="keywords" content="3d tour, villa, phuket, luxury property, interactive" />
+		<meta name="author" content="Egor Lyfar" />
 		<link rel="shortcut icon" href="favicon.ico">
 		<link rel="stylesheet" type="text/css" href="css/base.css" />
 		<script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
 	</head>
-	<body class="demo-1">
+	<body class="demo-3">
 		<main>
 			<div class="message">Tilt your phone to see the effect.</div>
 			<div class="frame">
 				<div 
 					id="gl" 
-					data-imageOriginal="img/lady.jpg" 
-					data-imageDepth="img/lady-map.jpg" 
-					data-horizontalThreshold="35" 
-					data-verticalThreshold="15">
+					data-imageOriginal="img/inside.jpg" 
+					data-imageDepth="img/inside-map.jpg" 
+					data-horizontalThreshold="15" 
+					data-verticalThreshold="25">
 				</div>
 				<div class="frame__title-wrap">
-					<h1 class="frame__title">Fake 3D Effect with Shaders</h1>
+					<h1 class="frame__title">Luxury Villa Phuket • Inside View</h1>
 					<p class="frame__tagline">Move your mouse around.</a></p>
 				</div>
 				<div class="frame__links">
-					<a href="https://tympanus.net/Development/GridRevealEffects/">Previous Demo</a>
-					<a href="https://tympanus.net/codrops/?p=38413">Article</a>
+					<a href="outside.html">View Outside</a>
+					<a href="360.html">View 360°</a>
 				</div>
-				<a class="frame__github" href="https://github.com/akella/fake3d">GitHub</a>
-				<div class="frame__demos">
-					<a href="index.html" class="frame__demo frame__demo--current">demo 1</a>
-					<a href="index2.html" class="frame__demo">demo 2</a>
-					<a href="index3.html" class="frame__demo">demo 3</a>
-					<a href="index4.html" class="frame__demo">demo 4</a>
-				</div>
-				<div class="frame__content">QO</div>
+				<a class="frame__github" href="https://egor.lyfar.com">Made by Egor</a>
+				<div class="frame__content">A</div>
 			</div>
 		</main>
 		<script src="js/app.js"></script>
 	</body>
-</html>
+</html> 
